--- a/Web_basic/self_introduction/style.css
+++ b/Web_basic/self_introduction/style.css
@@ -12,6 +12,9 @@ h2{
     margin-bottom: 0px;
     margin-left: 30px;
 }
+#control{
+    padding-left: 30px;
+}
 #grid{
     display: grid;
     border-top: 2px solid gray;
